# ulysses-segmenter

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
diagrams/: segmenter_inference_pipeline.drawio  segmenter_pipeline.drawio
docs/source/: api_reference.md  conf.py  index.md  intro.md
notebooks/: 1_build_segmenter_tokenizer.ipynb  2_generate_labels_from_regular_expressions.ipynb  3_train_segmenter_model.ipynb  4_result_analysis.ipynb  4_train_lstm_baseline.ipynb  5_refine_labels_interactively.ipynb  5_result_analysis.ipynb  6_refine_labels_interactively.ipynb  6_result_analysis.ipynb  7_optimization_and_compression.ipynb  config.py  eval_model.py  prepare_dataset.ipynb  prune_heads.py  result_analysis.ipynb  segmentador_dev.ipynb
notebooks/interactive_labeling/: Makefile  README.md  __init__.py  app.py  python_api.py
notebooks/tests/: __init__.py  conftest.py  test_data_labeling_regex.py
publication_resources/: .gitignore  README.md  active_learning_label_curation.py  approx_recall_and_precision.py  baseline_test_crf.py  baseline_test_gazetteer.py  baseline_test_lexnlp.py  baseline_test_nltk.py  baseline_test_spacy.py  baseline_test_topictiling.py  baseline_utils.py  evaluate_inference_window_params.py  evaluate_regex_international_leg.py  evaluate_shrunken_windows.py  evaluate_weakly_supervised_models.py  few_shot_fine_tuning_international_leg.py  fine_tune_state_leg_and_other_docs.py  train_active_learning_models.py  train_tokenizer_from_leg_bills.py  train_weakly_supervised_bert_models.py  train_weakly_supervised_lstm_models.py  train_with_active_learning_vs_random_data.py  utils.py  weak_supervision_data_preparation.py
publication_resources/results/: inference_results_with_moving_windows.csv  scores_c1.csv  scores_macro.csv
src/: __init__.py  poolers.py  segmentador.py
src/segmentador/: __init__.py  _base.py  finetune.py  optimize.py  poolers.py  segmentador.py  segmenter.py
tests/: conftest.py  paths.py  test_errors_and_warnings.py  test_extra.py  test_noise_removal.py  test_quantization.py  test_segmentation.py
tests/resources/: test_legal_text_long.txt  test_legal_text_short.txt  test_legal_text_with_noise.txt
train_statistics/10_6000_layer_model/: all_results.json
train_statistics/12_12000_layer_model/: all_results.json
train_statistics/12_6000_layer_model/: all_results.json
train_statistics/2_12000_layer_model/: all_results.json
train_statistics/4_12000_layer_model/: all_results.json
train_statistics/4_6000_layer_model/: all_results.json
train_statistics/curated_results/: backup_BERTSegmenter__pretrained_segmenter_model_10_6000_layer_model_assymetric_max.pickle  backup_BERTSegmenter__pretrained_segmenter_model_10_6000_layer_model_gaussian.pickle  backup_BERTSegmenter__pretrained_segmenter_model_10_6000_layer_model_max.pickle  backup_BERTSegmenter__pretrained_segmenter_model_10_6000_layer_model_sum.pickle  backup_BERTSegmenter__pretrained_segmenter_model_12_6000_layer_model_assymetric_max.pickle  backup_BERTSegmenter__pretrained_segmenter_model_12_6000_layer_model_gaussian.pickle  backup_BERTSegmenter__pretrained_segmenter_model_12_6000_layer_model_max.pickle  backup_BERTSegmenter__pretrained_segmenter_model_12_6000_layer_model_sum.pickle  backup_BERTSegmenter__pretrained_segmenter_model_2_6000_layer_model_assymetric_max.pickle  backup_BERTSegmenter__pretrained_segmenter_model_2_6000_layer_model_gaussian.pickle  backup_BERTSegmenter__pretrained_segmenter_model_2_6000_layer_model_max.pickle  backup_BERTSegmenter__pretrained_segmenter_model_2_6000_layer_model_sum.pickle  backup_BERTSegmenter__pretrained_segmenter_model_4_6000_layer_model_assymetric_max.pickle  backup_BERTSegmenter__pretrained_segmenter_model_4_6000_layer_model_gaussian.pickle  backup_BERTSegmenter__pretrained_segmenter_model_4_6000_layer_model_max.pickle  backup_BERTSegmenter__pretrained_segmenter_model_4_6000_layer_model_sum.pickle  backup_BERTSegmenter__pretrained_segmenter_model_6_6000_layer_model_assymetric_max.pickle  backup_BERTSegmenter__pretrained_segmenter_model_6_6000_layer_model_gaussian.pickle  backup_BERTSegmenter__pretrained_segmenter_model_6_6000_layer_model_max.pickle  backup_BERTSegmenter__pretrained_segmenter_model_6_6000_layer_model_sum.pickle  backup_BERTSegmenter__pretrained_segmenter_model_8_6000_layer_model_assymetric_max.pickle  backup_BERTSegmenter__pretrained_segmenter_model_8_6000_layer_model_gaussian.pickle  backup_BERTSegmenter__pretrained_segmenter_model_8_6000_layer_model_max.pickle  backup_BERTSegmenter__pretrained_segmenter_model_8_6000_layer_model_sum.pickle  backup_LSTMSegmenter__pretrained_segmenter_model_128_6000_1_lstm_checkpoints_epoch_3_step_3591_ckpt_assymetric_max.pickle  backup_LSTMSegmenter__pretrained_segmenter_model_128_6000_1_lstm_checkpoints_epoch_3_step_3591_ckpt_gaussian.pickle  backup_LSTMSegmenter__pretrained_segmenter_model_128_6000_1_lstm_checkpoints_epoch_3_step_3591_ckpt_max.pickle  backup_LSTMSegmenter__pretrained_segmenter_model_128_6000_1_lstm_checkpoints_epoch_3_step_3591_ckpt_sum.pickle  backup_LSTMSegmenter__pretrained_segmenter_model_128_6000_2_lstm_checkpoints_epoch_3_step_3591_ckpt_assymetric_max.pickle  backup_LSTMSegmenter__pretrained_segmenter_model_128_6000_2_lstm_checkpoints_epoch_3_step_3591_ckpt_gaussian.pickle  backup_LSTMSegmenter__pretrained_segmenter_model_128_6000_2_lstm_checkpoints_epoch_3_step_3591_ckpt_max.pickle  backup_LSTMSegmenter__pretrained_segmenter_model_128_6000_2_lstm_checkpoints_epoch_3_step_3591_ckpt_sum.pickle  backup_LSTMSegmenter__pretrained_segmenter_model_256_6000_1_lstm_checkpoints_epoch_3_step_3591_ckpt_assymetric_max.pickle  backup_LSTMSegmenter__pretrained_segmenter_model_256_6000_1_lstm_checkpoints_epoch_3_step_3591_ckpt_gaussian.pickle  backup_LSTMSegmenter__pretrained_segmenter_model_256_6000_1_lstm_checkpoints_epoch_3_step_3591_ckpt_max.pickle  backup_LSTMSegmenter__pretrained_segmenter_model_256_6000_1_lstm_checkpoints_epoch_3_step_3591_ckpt_sum.pickle  (+13 more)
train_statistics/logs/: log_12000_subwords.txt  (+1 more)
(+59 files in other folders)
