[tool.poetry]
name = "segmentador"
version = "0.1.0"
description = "Segmentador de textos legais para a Câmara dos Deputados."
authors = ["felsiq <felipe.siqueira@usp.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "^1.4.0"
numpy = "^1.22.2"
torch = {url = "https://download.pytorch.org/whl/nightly/cu113/torch-1.12.0.dev20220209%2Bcu113-cp39-cp39-linux_x86_64.whl"}
datasets = "^1.18.3"
scikit-learn = "^1.0.2"
nltk = "^3.7"
transformers = {extras = ["onnx"], version = "^4.16.2"}
optimum = {extras = ["intel"], version = "^0.1.3"}
seqeval = "^1.2.2"
colorama = "^0.4.4"
tqdm = "^4.63.0"
sentencepiece = "^0.1.96"
psutil = "^5.9.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"
pylint = "^2.12.2"
notebook = "^6.4.8"
jupyter-contrib-nbextensions = "^0.5.1"
ipywidgets = "^7.6.5"
autopep8 = "^1.6.0"
grip = "^4.6.0"
pytest = "^7.1.0"
pytest-cov = "^3.0.0"

[tool.mypy]
warn_return_any = true
ignore_missing_imports = true
disallow_any_generics = true
strict_equality = true
show_error_codes = true
warn_unused_configs = true
warn_unreachable = true

[tool.pylint.messages_control]
generated-members = "torch.*"
disable = "R0903, R0914, R0913"

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"
