[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "segmentador"
version = "0.1.0"
description = "Segmentador de textos legais para a Câmara dos Deputados."
authors = [
	{name="felsiq", email= "felipe.siqueira@usp.br"}
]

requires-python = ">=3.9"

dependencies = [
	"numpy == 1.22.3",
	"torch == 1.11.0",
	"transformers == 4.16.2",
]

[project.optional-dependencies]
general = [
	"black == 22.1.0",
]

notebooks = [
	"seaborn == 0.11.2",
	"notebook == 6.4.8",
	"jupyter-contrib-nbextensions == 0.5.1",
	"ipywidgets == 7.6.5",
	"autopep8 == 1.6.0",
]

train = [
	"datasets == 1.18.3",
	"pandas == 1.4.1",
	"scikit-learn == 1.0.2",
	"nltk == 3.7",
	"colorama == 0.4.4",
	"tqdm == 4.63.0",
	"sentencepiece == 0.1.96",
	"psutil == 5.9.0",
	"pytorch_lightning == 1.5.10",
]

test = [
	"mypy == 0.931",
	"pylint == 2.12.2",
	"pytest == 7.1.0",
	"pytest-cov == 3.0.0",
	"tox == 3.24.5",
	"pytest-html == 3.1.1",
]

doc = [
	"grip == 4.6.0",
]

[tool.mypy]
ignore_missing_imports = true
strict_equality = true
show_error_codes = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_incomplete_stub = true

[tool.pytest.ini_options]
addopts = """
	--cov=segmentador
	--last-failed
	--failed-first
	--new-first
	--cov-report=html
"""
testpaths = [
	"tests",
]

[tool.pylint.messages_control]
generated-members = "torch.*"
disable = """
	too-few-public-methods,
	too-many-locals,
	too-many-arguments,
	too-many-statements
"""

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39, py310, mypy, pylint
isolated_build = true

[testenv]
whitelist_externals = flit
commands =
	pip install .
	pip install '.[test]'
	python -m pytest
	python -m pytest src/ --doctest-modules --doctest-glob="**/*.py"

[testenv:mypy]
basepython = python3.9
deps = mypy
commands =
	python -m mypy src/

[testenv:pylint]
basepython = python3.9
deps =
	pylint
	pytest
commands =
	python -m pylint src/
	python -m pylint --disable='missing-function-docstring' tests/
"""
