[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "segmentador"
version = "0.4.0"
description = "Segmentador de textos legislativos da Câmara dos Deputados do Brasil."
authors = [
    {name="felsiq", email= "felipe.siqueira@usp.br"}
]

requires-python = ">=3.7"

dependencies = [
    "numpy >= 1.21.6",
    "torch >= 1.11.0",
    "transformers >= 4.16.2",
    "regex >= 2022.3.15",
    "buscador @ git+https://github.com/ulysses-camara/ulysses-fetcher@master",
]

[project.optional-dependencies]
optimize = [
    "optimum[onnxruntime] >= 1.6.1",
    "onnx >= 1.12.0",
    "onnxruntime >= 1.12.0",
    "colorama >= 0.4.4",
]

codestyle = [
    "black >= 22.1.0",
    "black[jupyter] >= 22.1.0",
]

notebooks = [
    "seaborn >= 0.11.2",
    "notebook >= 6.4.8",
    "jupyter-contrib-nbextensions >= 0.5.1",
    "ipywidgets >= 7.6.5",
    "autopep8 >= 1.6.0",
    "flask >= 2.0.3",
    "flask-cors >= 3.0.10",
    "onnx >= 1.12.0",
]

train = [
    "datasets >= 1.18.3",
    "pandas >= 1.3.5",
    "scikit-learn >= 1.0.2",
    "nltk >= 3.7",
    "colorama >= 0.4.4",
    "tqdm >= 4.63.0",
    "sentencepiece >= 0.1.96",
    "psutil >= 5.9.0",
    "pytorch_lightning >= 1.5.10",
]

test = [
    "mypy == 0.942",
    "pylint == 2.13.5",
    "pytest == 7.1.0",
    "pytest-cov == 3.0.0",
    "tox == 3.24.5",
    "pytest-html == 3.1.1",
    "pandas == 1.3.5",
    "datasets == 1.18.3",
    "onnx == 1.12.0",
]

docs = [
    "grip >= 4.6.0",
    "numpydoc == 1.6.0",
    "sphinx-autoapi == 3.0.0",
    "sphinx-rtd-theme == 2.0.0",
    "sphinxcontrib-applehelp == 1.0.8",
    "sphinxcontrib-devhelp == 1.0.6",
    "sphinxcontrib-htmlhelp == 2.0.5",
    "sphinxcontrib-jquery == 4.1",
    "sphinxcontrib-jsmath == 1.0.1",
    "sphinxcontrib-mermaid == 0.9.2",
    "sphinxcontrib-qthelp == 1.0.7",
    "sphinxcontrib-serializinghtml == 1.1.10",
]

[tool.mypy]
ignore_missing_imports = true
strict_equality = true
show_error_codes = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
warn_redundant_casts = true
warn_incomplete_stub = true
non_interactive = true
install_types = true

[tool.pytest.ini_options]
addopts = """
    --cov=segmentador
    --failed-first
    --cov-report=html
"""
testpaths = [
    "tests",
]

[tool.pylint.messages_control]
generated-members = "torch.*"
jobs = 4
disable = """
    too-few-public-methods,
    too-many-locals,
    too-many-arguments,
    too-many-statements,
    too-many-branches,
    import-outside-toplevel,
    useless-option-value
"""
min-similarity-lines=10

[tool.black]
line-length=100

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37, py39, py310, mypy, pylint
isolated_build = true

[gh-actions]
python =
    3.9: py39, mypy, pylint
    3.7: py37

[testenv]
whitelist_externals = flit
commands =
    pip install -U pip
    pip --timeout=600 install '.[test,optimize]'
    python -m pytest src/ --doctest-modules --doctest-glob='**/*.py'
    python -m pytest --verbose --tb=long

[testenv:mypy]
basepython = python3.9
deps = mypy == 0.991
commands =
    python -m mypy --install-types --non-interactive src/
    python -m mypy src/

[testenv:pylint]
basepython = python3.9
deps =
    pylint == 2.16.0
    buscador @ git+https://github.com/ulysses-camara/ulysses-fetcher@master
    pytest
    datasets
    onnx
    onnxruntime
commands =
    python -m pylint --disable='missing-function-docstring' tests/
    python -m pylint src/
"""
